objects/copado__User_Story__c.object
<CustomObject>
    <description>Agile form of requirements gathering</description>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This User Story is blocked by another User Story</description>
        <label>Blocked by</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Blocked by (User Stories)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for defining the owner of the user story in business perspective</description>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Owner_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Business Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centro_Slack_Channel__c</fullName>
        <label>Centro Slack Channel</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Work_Item_Priority__c</fullName>
        <label>Copado Work Item Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The version where the issue was found</description>
        <inlineHelpText>The version where the issue was found</inlineHelpText>
        <label>Customer Version</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>User Stories (Customer Version)</relationshipLabel>
        <relationshipName>User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Released__c</fullName>
        <label>Date Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_Completed__c</fullName>
        <description>Required documentation for the user story.</description>
        <inlineHelpText>The following documentation must be provided:
- Release Notes
- Functional documentation (for docs.copa.do)
- Upgrade instructions
- PoC
- Copado Academy</inlineHelpText>
        <label>Documentation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <label>Documentation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_Hours__c</fullName>
        <formula>IF(
CONTAINS( Estimated_Time__c , &quot;d&quot;) &amp;&amp; CONTAINS( Estimated_Time__c , &quot;h&quot;),
(VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), 0, FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))-1)) * 8 ) +
(VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))+1, (LEN(SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;)) - (FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;)) + 1) ) ))) ,
IF(
CONTAINS( Estimated_Time__c , &quot;h&quot;),
(VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), 0, FIND(&quot;h&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))-1)) ),
IF(
CONTAINS( Estimated_Time__c , &quot;d&quot;),
(VALUE(MID( SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;), 0, FIND(&quot;d&quot;, SUBSTITUTE(Estimated_Time__c , &quot; &quot;, &quot;&quot;))-1)) * 8),
0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Time (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Time__c</fullName>
        <inlineHelpText>Please use the format: &quot;X y&quot; where &quot;X&quot; is the amount of time (number) and &quot;y&quot; is the unit defined in &quot;d&quot; (day) or &quot;h&quot; (hour). For example &quot;1h&quot;, &quot;3d&quot; or &quot;1d 3h&quot;. If the amount of hours is equals or higher than 8, the value will be automatically translated into days and hours. For example: &quot;10h&quot; will be translated into &quot;1d2h&quot;.</inlineHelpText>
        <label>Estimated Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Order__c</fullName>
        <label>Execution Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IT_Ops_Priority__c</fullName>
        <label>IT Ops Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Know Issue Being Investigated or Solved.</description>
        <label>Known Issue</label>
        <referenceTo>Known_Issue__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Time_End_Date__c</fullName>
        <label>Lead Time End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Start_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Lead Time Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead_Time_End_Date__c)), Lead_Time_End_Date__c - Lead_Time_Start_Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Efforts__c</fullName>
        <description>Documents hourly contribution estimated on developing a story</description>
        <inlineHelpText>Documents hourly contribution estimated on developing a story</inlineHelpText>
        <label>Level of Efforts</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <formula>Module__r.Name</formula>
        <label>Module Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Copado_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>My Copado Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>APO User Story</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>My_Copado_Task__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>Child_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patch_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will keep the relationship with the Patch release after a patched user story is promoted and merged into the major next release.</inlineHelpText>
        <label>Patch Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>User Stories (Patch Release)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_User_Story_Tasks_Counter__c</fullName>
        <description>Counting number of related User Story Tasks records, where Status are not Completed or Cancelled.</description>
        <label>Pending User Story Tasks Counter</label>
        <summaryFilterItems>
            <field>copado__User_Story_Task__c.copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__User_Story_Task__c.copado__User_Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <label>Planned Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress_Old__c</fullName>
        <description>Progress of the development in the User Story</description>
        <label>Progress Old</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pull_Requests_Counter__c</fullName>
        <label>Pull Requests Counter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>Small 1 week or less /
Medium 2 weeks or less /
Large 4 weeks or less /
XLarge +4 weeks /
XXL +12 weeks (?)</inlineHelpText>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spillover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Scrum Masters can mark Spillover as TRUE when a US is carried over from one Sprint to the next one.</description>
        <label>Spillover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Runs_Counter__c</fullName>
        <label>Test Runs Counter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Remaining_Hours__c</fullName>
        <formula>IF(
ISBLANK(Estimated_Time__c ),
0,
Estimated_Time_Hours__c -  Time_Spent_hours__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_hours__c</fullName>
        <description>Time spent on the User Story in its entirety (including both logs on the story itself and the related tasks)</description>
        <formula>Time_Spent_on_User_Story_hours__c  +  Time_Spent_on_US_Tasks_hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time spent working on this User Story including Work Logs from the story and its related User Story Tasks</inlineHelpText>
        <label>Time Spent (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_on_US_Tasks_hours__c</fullName>
        <description>Time spent in total on User Story Tasks logged on a User Story</description>
        <label>Time Spent on US Tasks (hours)</label>
        <summarizedField>copado__User_Story_Task__c.Time_Spent_hours__c</summarizedField>
        <summaryForeignKey>copado__User_Story_Task__c.copado__User_Story__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_Spent_on_User_Story_hours__c</fullName>
        <description>Total time logged directly on the user story.</description>
        <label>Time Spent on User Story (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Recover__c</fullName>
        <formula>IF( NOT(AND(RecordType.DeveloperName = &apos;Bug&apos;,  OR(TEXT(copado__Status__c) = &apos;Released&apos;, TEXT(copado__Status__c) = &apos;Beta&apos;))), NULL,  Lead_Time_End_Date__c - IF(Parent_User_Story__r.RecordType.DeveloperName = &apos;Investigation&apos;, Parent_User_Story__r.CreatedDate,  CreatedDate))</formula>
        <label>Time to Recover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_resolution__c</fullName>
        <label>Type of resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Working as designed</fullName>
                </value>
                <value>
                    <fullName>Feature request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story_Type__c</fullName>
        <label>User Story Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Feature</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cmcSf__Apex_Test_Level__c</fullName>
        <description>Test levels in order from least to most restrictive</description>
        <label>Apex Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cmcSf__Apex_Test_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria_Status__c</fullName>
        <label>Acceptance Criteria Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Actual_Points_Other__c</fullName>
        <inlineHelpText>Use this field to split your User Story&apos;s actual effort on implementation, reviews, testing, and documentation among different scopes. Example: Dev and QA, Frontend and Backend. You can label this field to match your scope.</inlineHelpText>
        <label>Actual Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Code_Coverage__c</fullName>
        <description>Coverage of the Apex Classes added or committed within the User Story.</description>
        <label>Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Tests_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Tests Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Backburner_Rank__c</fullName>
        <label>Backburner Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Backlog_Rank__c</fullName>
        <description>Position of the User Story within the Backlog. Usually User Stories at the top of the Backlog are more relevant than User Stories at the bottom.</description>
        <label>Backlog Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Base_Branch__c</fullName>
        <description>Git branch which the feature branch is created from. This value is updated when committing in the user story and by default, it will be the main branch of the Deployment Flow or the base branch of the Release linked to the user story.</description>
        <inlineHelpText>Git branch which the feature branch is created from. This value is updated when committing in the user story and by default, it will be the main branch of the Deployment Flow or the base branch of the Release linked to the user story.e user story.</inlineHelpText>
        <label>Base Branch</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories_BA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Cancellation_Reason__c</fullName>
        <description>Describes why the User Story was cancelled, so that this information is available.</description>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Classes_Without_Coverage__c</fullName>
        <description>Number of classes without the minimum required coverage.</description>
        <label>Classes Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Criteria__c</fullName>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <description>Current status of the User Story Compliance scan.</description>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed - Findings detected</fullName>
                </value>
                <value>
                    <fullName>Completed - No Findings</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Resolved</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Data_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Developer)</relationshipLabel>
        <relationshipName>User_Stories_developer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Documentation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment_Type__c</fullName>
        <formula>TEXT(copado__Environment__r.copado__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current environment of the User Story. This value is added automatically by Copado based on the selected Credential.</description>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Epic containing the User Story.</description>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_CBM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this user story will not be included in the count of user stories ahead and behind.</description>
        <inlineHelpText>If checked, this user story will not be included in the count of user stories ahead and behind.</inlineHelpText>
        <label>Exclude From CBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Failing_Methods__c</fullName>
        <description>Number of Apex Class methods that failed during the Apex Test Run execution.</description>
        <label>Failing Methods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Copado_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Functional_Specifications__c</fullName>
        <label>Functional Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Git_Merge_Status__c</fullName>
        <description>The git merge status of the latest pull request between the feature branch and the target branch. This value is provided by the Git Repository. If there is no value, the Git Repository did not provide one.</description>
        <inlineHelpText>The git merge status of the latest pull request between the feature branch and the target branch. This value is provided by the Git Repository. If there is no value, the Git Repository did not provide one.</inlineHelpText>
        <label>Git Merge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mergeable</fullName>
                </value>
                <value>
                    <fullName>Conflicts Detected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <formula>copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c</formula>
        <label>Git Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Has_Apex_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value automatically updated by Copado whenever there are Apex Classes added or committed in the User Story.</description>
        <label>Has Apex Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Is_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <description>Latest Compliance Scan execution date.</description>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Promotion_Date__c</fullName>
        <label>Last Promotion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Deployment_Status__c</fullName>
        <description>Status of the latest validation Promotion for the User Story.</description>
        <formula>IF(copado__Last_Validation_Deployment__r.copado__Date__c &lt; copado__Latest_Commit_Date__c,
IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;OutDated&apos;)+&quot; &quot;+&quot;Validation Outdated&quot;, 
   IF(AND(NOT(ISBLANK(copado__Last_Validation_Promotion__c)),
                               (CONTAINS(TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),&apos;error&apos;)) || ISPICKVAL(copado__Last_Validation_Promotion__r.copado__Status__c, &apos;Validation failed&apos;)),
               IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;failed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),
               IF(AND(NOT(ISBLANK(copado__Last_Validation_Promotion__c)),
                               (CONTAINS(TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),&apos;Successfully&apos;)) || ISPICKVAL(copado__Last_Validation_Promotion__r.copado__Status__c, &apos;Validated&apos;)),
                           IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;completed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),
                           TEXT(copado__Last_Validation_Promotion__r.copado__Status__c)
                       )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Validation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Most recent validation Deployment for the User Story.</description>
        <label>Last Validation Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Promotion containing the most recent validation Deployment.</description>
        <label>Last Validation Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Latest_Commit_Date__c</fullName>
        <label>Latest Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Step_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any of the Quality Gates are Manual Steps (Pull Request, Manual Test, or Manual Approval), the story should be marked as &apos;Manual Step Required&apos;.</description>
        <label>Manual Step Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Tests_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Tests Passed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>